tests/unit/snapshots/lib__unit__snapshot_tests__app_state_snapshots__initial_app_state.snap
---
source: tests/unit/snapshot_tests.rs
expression: snapshot
---
AppSnapshot {
    repo_root: "/tmp/test_repo",
    should_quit: false,
    context_lines: 3,
    follow_renames: false,
    first_parent: false,
    mode: "History(file: Some(\"test.txt\"), focus: Commits)",
    commits_count: 0,
    selected_index: 0,
    layout_mode: Auto,
    loading: false,
    error_message: None,
    focused_panel: Some(
        Commits,
    ),
    terminal_width: 80,
    terminal_height: 24,
}
